--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -2,9 +2,9 @@ FROM node:16-alpine
 
 RUN npm install -g nodemon
 
-WORKDIR ./front
+WORKDIR /front
 COPY . .
-#COPY package.json .
+
 RUN npm install
 
 EXPOSE 3000
